--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head> </head>
   <body>
     <h3 class="violet">Guess the number</h3>
-    <h3 class="violet">From 1 to 10</h3>
+    <h3 class="violet">Choose from 1 to 10</h3>
     <div id="block">
       <input id="checkInput" type="text" placeholder="Type in your number" />
       <button type="button" id="checkBtn">TRY</button>
